# platform-abstraction

./: .gitignore  .travis.yml  CMakeLists.txt  README.markdown  README.md  criticalsection.h  cvraModuleMake.sh  make.sh  mutex.h  package.yml  panic.c  panic.h  semaphore.h  semaphores.h  threading.c  threading.h  threading_linux.c  threading_linux.h  timestamp.c  timestamp.h  xmalloc.c  xmalloc.h
mock/: criticalsection.c  criticalsection.h  mutex.c  mutex.h  semaphore.c  semaphore.h  semaphores.c  semaphores.h  timestamp.cpp
tests/: criticalsection_capturing_mock.h  criticalsection_mock_test.cpp  malloc_test.cpp  mutex_mock_test.cpp  panic_mock_test.cpp  platform_mock_test.cpp  semaphore_mock_test.cpp  threading_test.cpp  timestamp_test.cpp
ucos-iii/: mutex.c  mutex.h  semaphore.c  semaphore.h  semaphores.c  threading.c  threading.h  timestamp.c
